# pymp

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
